--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-<h1> Initial commit for nexmind </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NexMind: Employee Productivity Agents</title>
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+        }
+        header {
+            margin-bottom: 30px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+        nav ul li {
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #77B300;
+            text-decoration: none;
+            font-size: 1em;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        section {
+            max-width: 800px;
+            padding: 20px;
+        }
+        h2 {
+            color: #77B300;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        p, ul {
+            font-size: 1em;
+            line-height: 1.5;
+            margin-bottom: 20px;
+        }
+        ul {
+            text-align: left;
+        }
+        .button {
+            background: #77B300;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background 0.3s;
+            text-decoration: none;
+            display: inline-block;
+            margin: 10px;
+        }
+        .button:hover {
+            background: #669900;
+        }
+        footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>NexMind</h1>
+        <nav>
+            <ul>
+                <li><a href="#vision">Vision</a></li>
+                <li><a href="#problem">Problem</a></li>
+                <li><a href="#solution">Solution</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="vision">
+        <h2>Bold Vision</h2>
+        <p>Five years from now, every employee in the modern workplace will be empowered by their own personalized AI agent, revolutionizing how work is done. These agents will be fine-tuned with their organization’s own business data, goals, and decision-making frameworks.</p>
+    </section>
+
+    <section id="problem">
+        <h2>The Problem</h2>
+        <p>In the modern workplace, employees increasingly rely on large language models (LLMs) to enhance productivity. However, they are using generic LLMs not fine-tuned to their employer’s data, leading to poor inference and significant data-privacy risks.</p>
+        <h3>Examples:</h3>
+        <ul>
+            <li>Project Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
+            <li>Marketing Managers: Uploading performance spreadsheets for optimizing channel strategies.</li>
+            <li>Account Executives: Researching leads for tailored outreach messages.</li>
+        </ul>
+    </section>
+
+    <section id="solution">
+        <h2>The Solution</h2>
+        <p>Introducing NexMind: Enterprise-Grade Employee Productivity Agents - a comprehensive solution to enhance productivity while safeguarding data privacy, leveraging three key engines:</p>
+        <h3>1. Knowledge Engine</h3>
+        <p>Aggregates and synthesizes organizational knowledge, providing employees with accurate and contextually relevant information.</p>
+        <h3>2. Decision Engine</h3>
+        <p>Facilitates informed decision-making aligned with the organization’s unique precedents and strategic goals.</p>
+        <h3>3. Task Engine</h3>
+        <p>Streamlines task execution by integrating seamlessly with various tools and workflows, boosting overall productivity.</p>
+        <a href="https://forms.gle/your-google-form-link" class="button">Sign Up for Beta</a>
+    </section>
+
+    <footer>
+        <p>NexMind: Smarter, Safer Workplaces</p>
+    </footer>
+</body>
+</html>
