--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p>In the modern workplace, employees increasingly rely on large language models (LLMs) to enhance productivity. However, they are using generic LLMs not fine-tuned to their employer’s data, leading to poor inference and significant data-privacy risks.</p>
         <h3>Examples:</h3>
         <ul>
-            <li>Project Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
+            <li>Product Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
             <li>Marketing Managers: Uploading performance spreadsheets for optimizing channel strategies.</li>
             <li>Account Executives: Researching leads for tailored outreach messages.</li>
         </ul>
@@ -120,7 +120,7 @@
         <p>Facilitates informed decision-making aligned with the organization’s unique precedents and strategic goals.</p>
         <h3>3. Task Engine</h3>
         <p>Streamlines task execution by integrating seamlessly with various tools and workflows, boosting overall productivity.</p>
-        <a href="https://forms.gle/your-google-form-link" class="button">Sign Up for Beta</a>
+        <a href="https://forms.gle/2feDCXCEFGDiZ8F88" class="button">Sign Up for Beta</a>
     </section>
 
     <footer>
