--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
         }
         header {
-            margin-bottom: 30px;
+            width: 100%;
+            padding: 20px;
+            background-color: #1a1a1a;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         header h1 {
             margin: 0;
@@ -28,13 +34,13 @@
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin: 10px 0 0 0;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
-            margin-top: 10px;
         }
         nav ul li {
-            margin: 0 10px;
+            margin: 5px 10px;
         }
         nav ul li a {
             color: #77B300;
@@ -60,6 +66,7 @@
         }
         ul {
             text-align: left;
+            padding-left: 20px;
         }
         .button {
             background: #77B300;
@@ -79,6 +86,21 @@
         footer {
             margin-top: 30px;
             font-size: 0.9em;
+        }
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 1.5em;
+            }
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+            nav ul li {
+                margin: 5px 0;
+            }
+            section {
+                padding: 10px;
+            }
         }
     </style>
 </head>
@@ -105,7 +127,7 @@
         <p>In the modern workplace, employees increasingly rely on large language models (LLMs) to enhance productivity. However, they are using generic LLMs not fine-tuned to their employer’s data, leading to poor inference and significant data-privacy risks.</p>
         <h3>Examples:</h3>
         <ul>
-            <li>Product Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
+            <li>Project Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
             <li>Marketing Managers: Uploading performance spreadsheets for optimizing channel strategies.</li>
             <li>Account Executives: Researching leads for tailored outreach messages.</li>
         </ul>
@@ -120,7 +142,7 @@
         <p>Facilitates informed decision-making aligned with the organization’s unique precedents and strategic goals.</p>
         <h3>3. Task Engine</h3>
         <p>Streamlines task execution by integrating seamlessly with various tools and workflows, boosting overall productivity.</p>
-        <a href="https://forms.gle/2feDCXCEFGDiZ8F88" class="button">Sign Up for Beta</a>
+        <a href="https://forms.gle/your-google-form-link" class="button">Sign Up for Beta</a>
     </section>
 
     <footer>
