--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <li><a href="#vision">Vision</a></li>
                 <li><a href="#problem">Problem</a></li>
                 <li><a href="#solution">Solution</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Beta</a></li>
             </ul>
         </nav>
     </header>
@@ -142,7 +142,7 @@
         <p>Facilitates informed decision-making aligned with the organization’s unique precedents and strategic goals.</p>
         <h3>3. Task Engine</h3>
         <p>Streamlines task execution by integrating seamlessly with various tools and workflows, boosting overall productivity.</p>
-        <a href="https://forms.gle/your-google-form-link" class="button">Sign Up for Beta</a>
+        <a href="https://forms.gle/9R1Eur7mB7iEswW97" class="button">Sign Up for Beta</a>
     </section>
 
     <footer>
