--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     </header>
 
     <section id="vision">
-        <h2>Bold Vision</h2>
-        <p>Five years from now, every employee in the modern workplace will be empowered by their own personalized AI agent, revolutionizing how work is done. These agents will be fine-tuned with their organization’s own business data, goals, and decision-making frameworks.</p>
+        <h2>Vision</h2>
+        <p>Modern workplaces will have dual modalities of talent: Human and AI. These dual modalites will force multiply to unlock unprecedented enterprise value.</p>
     </section>
 
     <section id="problem">
@@ -146,7 +146,7 @@
     </section>
 
     <footer>
-        <p>NexMind: Smarter, Safer Workplaces</p>
+        <p>NexMind: Smarter, Safer Workplace AI</p>
     </footer>
 </body>
 </html>
