--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@
 
     <section id="problem">
         <h2>The Problem</h2>
-        <p>In the modern workplace, employees increasingly rely on large language models (LLMs) to enhance productivity. However, they are using generic LLMs not fine-tuned to their employer’s data, leading to poor inference and significant data-privacy risks.</p>
-        <h3>Examples:</h3>
+        <p>Enterprises lack the levers to govern, measure, and maximize the performance of their AI talent modalities.</p>
+        <h3>They deal with several risks</h3>
         <ul>
-            <li>Project Managers: Sharing the latest churn data with LLMs for feature prioritization recommendations.</li>
-            <li>Marketing Managers: Uploading performance spreadsheets for optimizing channel strategies.</li>
-            <li>Account Executives: Researching leads for tailored outreach messages.</li>
+            <li>Data-Privacy Risks: Enterprises risk compromising their confidential business data, leading to potential breaches and loss of sensitive information.</li>
+            <li>Lack of Influence on AI Orientation: Enterprises have minimal control over the policies, principles, and goals guiding AI systems, leading to misalignment with business objectives.
+</li>
+            <li>Suboptimal AI Performance: Poor governance and data management result in AI systems delivering inferior inference performance, undermining their potential to add value.
+</li>
         </ul>
     </section>
 
