--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section id="problem">
         <h2>The Problem</h2>
         <p>Enterprises lack the levers to govern, measure, and maximize the performance of their AI talent modalities.</p>
-        <h3>They deal with several risks</h3>
+        <h3>Risks</h3>
         <ul>
             <li>Data-Privacy Risks: Enterprises risk compromising their confidential business data, leading to potential breaches and loss of sensitive information.</li>
             <li>Lack of Influence on AI Orientation: Enterprises have minimal control over the policies, principles, and goals guiding AI systems, leading to misalignment with business objectives.
