--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
     <section id="solution">
         <h2>The Solution</h2>
-        <p>Introducing NexMind: Enterprise-Grade Employee Productivity Agents - a comprehensive solution to enhance productivity while safeguarding data privacy, leveraging three key engines:</p>
-        <h3>1. Knowledge Engine</h3>
-        <p>Aggregates and synthesizes organizational knowledge, providing employees with accurate and contextually relevant information.</p>
-        <h3>2. Decision Engine</h3>
-        <p>Facilitates informed decision-making aligned with the organization’s unique precedents and strategic goals.</p>
-        <h3>3. Task Engine</h3>
-        <p>Streamlines task execution by integrating seamlessly with various tools and workflows, boosting overall productivity.</p>
+        <p>Introducing NexMind: Enterprise-Grade comprehensive AI solution to enhance productivity while safeguarding data privacy, leveraging three key engines:</p>
+        <h3>1. Governance Engine</h3>
+        <p>Provides robust governance and data-privacy controls to safeguard proprietary data, ensuring that no critical datasets are leaked or misused, while maintaining compliance with regulatory standards..</p>
+        <h3>2. Orientation Engine</h3>
+        <p>Ensures that AI talent adhere to your organization's employee policies, cultural values, and strategic goals, guiding them to align with your company's ethos in every interaction and decision..</p>
+        <h3>3. Performance Engine</h3>
+        <p>Guarantees that AI talent meet the performance criteria defined by the roles and responsibilities within your organization, ensuring alignment with expectations and driving consistent results..</p>
         <a href="https://forms.gle/9R1Eur7mB7iEswW97" class="button">Sign Up for Beta</a>
     </section>
 
