--- a/index.html
+++ b/index.html
@@ -127,23 +127,24 @@
         <p>Enterprises lack the levers to govern, measure, and maximize the performance of their AI talent modalities.</p>
         <h3>Risks</h3>
         <ul>
-            <li>Data-Privacy Risks: Enterprises risk compromising their confidential business data, leading to potential breaches and loss of sensitive information.</li>
             <li>Lack of Influence on AI Orientation: Enterprises have minimal control over the policies, principles, and goals guiding AI systems, leading to misalignment with business objectives.
-</li>
+            </li>
             <li>Suboptimal AI Performance: Poor governance and data management result in AI systems delivering inferior inference performance, undermining their potential to add value.
-</li>
+            </li>
+            <li>Data-Privacy Risks: Enterprises risk compromising their confidential business data, leading to potential breaches and loss of sensitive information.</li>
+            
         </ul>
     </section>
 
     <section id="solution">
         <h2>The Solution</h2>
         <p>Introducing NexMind: Enterprise-Grade comprehensive AI solution to enhance productivity while safeguarding data privacy, leveraging three key engines:</p>
-        <h3>1. Governance Engine</h3>
-        <p>Provides robust governance and data-privacy controls to safeguard proprietary data, ensuring that no critical datasets are leaked or misused, while maintaining compliance with regulatory standards..</p>
-        <h3>2. Orientation Engine</h3>
-        <p>Ensures that AI talent adhere to your organization's employee policies, cultural values, and strategic goals, guiding them to align with your company's ethos in every interaction and decision..</p>
-        <h3>3. Performance Engine</h3>
-        <p>Guarantees that AI talent meet the performance criteria defined by the roles and responsibilities within your organization, ensuring alignment with expectations and driving consistent results..</p>
+        <h3>Orientation Engine</h3>
+        <p>Ensures that AI talent adhere to your organization's employee policies, cultural values, and strategic goals, guiding them to align with your company's ethos in every interaction and decision.</p>
+        <h3>Performance Engine</h3>
+        <p>Guarantees that AI talent meet the performance criteria defined by the roles and responsibilities within your organization, ensuring alignment with expectations and driving consistent results.</p>
+        <h3>Governance Engine</h3>
+        <p>Provides robust governance and data-privacy controls to safeguard proprietary data, ensuring that no critical datasets are leaked or misused, while maintaining compliance with regulatory standards.</p>
         <a href="https://forms.gle/9R1Eur7mB7iEswW97" class="button">Sign Up for Beta</a>
     </section>
 
