--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <section id="problem">
         <h2>The Problem</h2>
-        <p>Enterprises will lack the levers to orient, inflence, and govern the performance of their AI talent modalities.</p>
+        <p>Enterprises will lack the levers to orient, influence, and govern the performance of their AI talent modalities.</p>
         <h3>Risks</h3>
         <ul>
             <li>Lack of Influence on AI Orientation: Enterprises have minimal control over the policies, principles, and goals guiding AI systems, leading to misalignment with business objectives.
